# PR-Sensei-Shared

./: ARCHITECTURE.md  README.md  pr_espnow_wire.h  schema.h
components/as_core/: .gitignore  CMakeLists.txt  README.md  cloud_secrets.h.example  idf_component.yml  pr_cloud.cpp  pr_cloud.h
components/pr_contract/: CMakeLists.txt  idf_component.yml
components/pr_data/: README.md
components/pr_sim/: README.md
components/pr_ui/: CMakeLists.txt  README.md  idf_component.yml  pr_ui_types.h  ui_gauge.c  ui_gauge.h  ui_theme.c  ui_theme.h
contracts/: CHANGELOG.md  account.v1.md  data-flow.v1.md  mqtt-topics.md  registration.v1.md  telemetry.v1.md  telemetry.v1.schema.json
design/: generate-tokens.mjs  tokens.css  tokens.h  tokens.json
schema/: README.md
